2013-12-24  Daniel Colascione  <dancol@dancol.org>

	* icomplete.el: Remove redundant :group arguments to `defcustom'
	throughout.
	(icomplete-show-matches-on-no-input): New customizable variable.
	(icomplete-minibuffer-setup): Call `icomplete-exhibit' on setup if
	we have something to show.
	(icomplete-exhibit): Compute completions even if we have no user
	input.

2013-12-23  Daniel Colascione  <dancol@dancol.org>

	* icomplete.el: Move `provide' to end of file.

2013-12-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el (gnutls-verify-error): Add version tag.

2013-12-23  Chong Yidong  <cyd@gnu.org>

	* subr.el (set-transient-map): Rename from
	set-temporary-overlay-map.  Doc fix.

	* face-remap.el (text-scale-adjust):
	* indent.el (indent-rigidly):
	* kmacro.el (kmacro-call-macro):
	* minibuffer.el (minibuffer-force-complete):
	* repeat.el (repeat):
	* simple.el (universal-argument--mode):
	* calendar/todo-mode.el (todo-insert-item--next-param):
	* progmodes/f90.el (f90-abbrev-start): Callers changed.

	* indent.el (indent-rigidly): Use substitute-command-keys.

2013-12-22  Kenjiro NAKAYAMA <nakayamakenjiro@gmail.com>

	* net/eww.el (eww-tag-select): Add text-property to jump to next
	select field.
        (eww) : Add non-supported ftp error.

2013-12-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby--electric-indent-p): Improve the
	comments.  Handle electric indent after typing `?' and `!'.

2013-12-22  Chong Yidong  <cyd@gnu.org>

	* faces.el (face-spec-recalc): If the theme specs are not
	applicable to a frame, fall back on the defface spec.  This
	prevents themes from obliterating faces on low-color terminals.

2013-12-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-smie--implicit-semi-p): Return t
	after `{'.  We need it after block openers, and it doesn't seem
	to hurt after hash openers.

2013-12-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby--at-indentation-p): New function,